MK-1678 Fix many of the layout issues * margin above result panel removed * result panel completly hidden when taxonomy panel is showing (tabs were still visible) * simplified overly complex style, using bootstrap classes * fix hidden popover at the bottom of the panel and remove double-scroll (which is absolutly to avoid on smaller devices) * fix More/Less buttons position

--- a/less/ng-obiba-mica.less
+++ b/less/ng-obiba-mica.less
@@ -361,12 +361,15 @@ span.loading {
   background: @gray-lighter;
 }
 
-.panel {
+.panel.panel-taxonomy {
   .panel {
     border: 0;
     .panel-heading {
       background: #fafafa;
     }
+  }
+  .panel-group .panel + .panel {
+    margin-top: 0px;
   }
 }
 
